syntax = "proto3";

package raft;

message AppendEntriesRequest {

    // Leaderâ€™s term
    uint32 term = 1;

    // Index of log entry immediately preceding new ones
    uint32 prevLogIndex = 2;

    // Term of prevLogIndex entry
    uint32 leaderCommit = 3;

    // Id of the leader
    string leaderId = 4;

    // Log entries to store (empty for heartbeat; may send more than one for efficiency)
    repeated Payload entries = 5;
}

message AppendEntriesResponse {

    // Followers current term.
    uint32 term = 1;

    // Follower that sent this response
    string followerId = 2;

    // True if follower contained entry matching prevLogIndex and prevLogTerm
    bool success = 3;
}

message Payload {
    uint32 index = 1;
    bytes payload = 2;
}
